--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'mysql:mysql-connector-java:5.1.47'
     implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
+    //implementation 'org.hibernate:hibernate-core'
 }
